adds icon rows, ready to branch

--- a/public/styles/scss/module/components/_button-components.scss
+++ b/public/styles/scss/module/components/_button-components.scss
@@ -12,6 +12,9 @@
     transition: all 250ms linear;
   }
 }
+.btn-link{
+  @extend %btn-link-override
+}
 .dropdown-toggle{
   height: 65px;
   width: 10%;
