--- a/views/includes/components/contact-section.pug
+++ b/views/includes/components/contact-section.pug
@@ -1,7 +1,7 @@
 #contact.mt-5
   footer
     .row.justify-content-center
-      .col-md-5.text-center
+      .col-md-5.col-8.text-center
         p.text-content Let's talk about how we can accomplish your real estate goals, Lorem Ipsum all day I love Olympia and my service is unmatched
         strong Contact Info
         p (206) 471-9205 <br> bengaubert@greenerealty.com
