--- a/views/includes/components/landing-reviews.pug
+++ b/views/includes/components/landing-reviews.pug
@@ -1,4 +1,4 @@
-.card.carousel-card.row
+.card.carousel-card.row.mb-2.mb-md-5
   #clientCarousel.carousel.slide(data-ride="carousel")
     .carousel-inner
     .carousel-item.active
