--- a/views/includes/components/landing.pug
+++ b/views/includes/components/landing.pug
@@ -6,8 +6,7 @@
         img(src="../styles/assets/img/client2.png" class="img-fluid landing-img")
       .card.landing-card.pb-2.mb-4
         .card-body.landing-card-body
-          h6.sub-title.text-center.text-md-left BEN GAUBERT
-          .landing-contacts
+          .icon-col#icon-col-a
             ul
               li
                 i(class=phone_icon)
@@ -20,7 +19,7 @@
               li
                 i(class=page_icon)
                 span Office
-                a(href="#") 5000 Greene Way
+                a(href="#") 1722 Harrison Ave NW, Olympia WA
     .col-lg-6.col-12.two-col-text-container.ml-auto.mr-auto
       .col-lg-10.col-10.text-center.ml-auto.mr-auto
         h1.big-title Your Guide To Thurston County Real Estate
