--- a/views/includes/components/navigation.pug
+++ b/views/includes/components/navigation.pug
@@ -17,23 +17,7 @@ nav.navbar.navbar-expand-md.navbar-dark.navbar-nav
         li.dropdown
           a.nav-item.nav-link(href='#' data-toggle='dropdown') Contact
           .dropdown-menu
-            a.dropdown-item(href='#') (206) 471-9205
-            a.dropdown-item(href='#') bengaubert@greenerealty.com
-            a.dropdown-item(href='#') 500 Greene Way
-
-//- nav.navbar.fixed-top.navbar-expand-lg.scrolling-navbar
-//-   a.navbar-brand(href="#")
-//-     img(src="../styles/assets/img/BenGaubert.png")
-//-   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation")
-//-     span.navbar-toggler-icon
-//-   .collapse.navbar-collapse(id="navbarResponsive")
-//-     ul.navbar-nav.ml-auto
-//-       li.nav-item
-//-         a.nav-link(href="#") Home
-//-       li.nav-item
-//-         a.nav-link(href="#") Services
-//-       li.nav-item
-//-         a.nav-link(href="#") Meet Ben
-//-       li.nav-item
-//-         a.nav-link(href="#") Connect
+            a.dropdown-item (206) 471-9205
+            a.dropdown-item bengaubert@greenerealty.com
+            a.dropdown-item 500 Greene Way
 
