--- a/public/styles/css/app.css
+++ b/public/styles/css/app.css
@@ -108,16 +108,14 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
   font-size: 1.45rem;
   letter-spacing: 0.021rem;
+  margin-bottom: 1rem;
 }
 
 .text-content {
   font-weight: 100;
   font-size: 1.15rem;
   letter-spacing: 0.4px;
-}
-
-.service-card-body .card-body .text-content {
-  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 @media (min-width: 992px) {
@@ -166,6 +164,10 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   transition: all 0.5s ease-in-out;
   width: 100%;
+}
+
+.btn-link:focus {
+  text-decoration: none;
 }
 
 .btn-md:hover:after {
@@ -580,16 +582,16 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.75rem;
 }
 
-.card .landing-contacts ul {
+.card .icon-col ul {
   display: block;
   margin: 0;
   padding: 0;
   list-style: none;
 }
-.card .landing-contacts ul > li:first-child {
+.card .icon-col ul > li:first-child {
   border-top: 0;
 }
-.card .landing-contacts ul > li {
+.card .icon-col ul > li {
   display: block;
   color: #515052;
   font-size: 0.875rem;
@@ -597,10 +599,10 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.021em;
   padding-top: 0.375rem !important;
   padding-bottom: 0.375rem !important;
-  padding-left: 50px;
+  padding-left: 53px;
   position: relative;
 }
-.card .landing-contacts ul > li > i {
+.card .icon-col ul > li > i {
   display: block;
   position: absolute;
   left: 0;
@@ -615,7 +617,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   box-shadow: 0 0.5rem 1.25rem 0 rgba(0, 0, 0, 0.11);
 }
-.card .landing-contacts ul > li > .svg-inline--fa {
+.card .icon-col ul > li > .svg-inline--fa {
   display: block;
   position: absolute;
   left: 0;
@@ -628,7 +630,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px;
   font-size: 0.9375rem;
 }
-.card .landing-contacts ul > li > span {
+.card .icon-col ul > li > span {
   display: block;
   padding-bottom: 1px;
   color: #8c8c8c;
@@ -636,12 +638,13 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   text-transform: uppercase;
 }
-.card .landing-contacts ul > li > a {
+.card .icon-col ul > li > a {
   display: block;
   color: #515052;
   font-size: 1rem;
   font-weight: bold;
   letter-spacing: 0.021em;
+  text-decoration: none;
 }
 
 .icon-container .icon-span {
@@ -717,7 +720,7 @@ h1, h2, h3, h4, h5, h6 {
   .two-col-img-container {
     margin-left: 5%;
     margin-top: 6.5em;
-    margin-bottom: 3em;
+    margin-bottom: 9em;
   }
 
   .landing-img {
@@ -786,7 +789,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .profile-card-header {
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
   margin-bottom: 0;
   background-color: #fff;
   border-bottom: 1px solid #e7e7e7;
@@ -802,9 +805,8 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #e9ecef;
   border: none;
   color: #515052;
-  margin-right: 1em;
+  line-height: 4em;
   margin-bottom: 0;
-  margin-left: 0.5rem;
   padding: 1rem;
   text-decoration: none;
 }
@@ -824,7 +826,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .profile-card-body {
   display: none;
-  padding: 1.75rem;
+  padding: 1.5rem;
 }
 .profile-card-body figure {
   padding: 0.25rem;
@@ -871,6 +873,63 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 1.5rem;
 }
 
+#section-banner-a {
+  background-image: url(../assets/img/mtn.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.services-container .img-title-wrapper {
+  z-index: 1000;
+}
+
+.service-col .service-card #icon-col-b ul > li {
+  padding-left: 65px;
+}
+.service-col .service-card #icon-col-b ul > li > i {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #004f11;
+  top: 0.5rem !important;
+  font-size: 0.9375rem;
+  line-height: 36px;
+  text-align: center;
+  box-shadow: 0 0.5rem 1.25rem 0 rgba(0, 0, 0, 0.11);
+}
+.service-col .service-card #icon-col-b ul > li > .svg-inline--fa {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0.5rem 1.25rem 0 rgba(0, 0, 0, 0.11);
+  color: #004f11;
+  padding: 10px;
+  font-size: 0.9375rem;
+}
+.service-col .service-card #icon-col-b ul > li > span {
+  display: block;
+  padding-bottom: 1px;
+  color: #8c8c8c;
+  font-size: 0.75rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.service-col .service-card #icon-col-b ul > li > a {
+  display: block;
+  color: #515052;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 0.021em;
+  text-decoration: none;
+}
 .service-col .service-card .post-thumb {
   display: block;
   position: relative;
@@ -885,29 +944,31 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.service-col .service-card .service-card-body .card-header {
+  border: none;
+}
 .service-col .service-card .service-card-body .card-body {
   padding: 0.5rem;
 }
-.service-col .service-card .service-card-body .service-title {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 0.75rem;
-  font-weight: 900;
-  font-size: 2.125rem;
-  letter-spacing: 0.021rem;
-}
-.service-col .service-card .service-card-body .service-title > a {
-  color: #515052;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
-  text-decoration: none;
-}
 
-#accordion .svg-inline--fa {
+#service-block .svg-inline--fa {
   margin-left: 1em;
 }
 
 @media (min-width: 992px) {
+  #section-banner-a {
+    background-size: cover;
+  }
+  #section-banner-a:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+  }
+
   .service-col .service-card .service-card-body {
     padding: 1.25rem;
   }
@@ -1042,7 +1103,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .carousel-card {
   background: white;
-  margin-bottom: 4em;
   margin-top: 2em;
 }
 
