--- a/public/styles/scss/base/_button-style-extends.scss
+++ b/public/styles/scss/base/_button-style-extends.scss
@@ -44,6 +44,11 @@
     //             transform: rotate(40deg);
     //   }
 }
+%btn-link-override{
+  &:focus{
+    text-decoration: none;
+  }
+}
 
 %btn-md-style{
   @extend %btn-style-override;
@@ -54,7 +59,7 @@
     left: 120%;
     -webkit-transform: rotate(40deg);
             transform: rotate(40deg);
-  }  
+  }
 }
 
 %btn-secondary-style{
