--- a/public/styles/scss/module/_landing-section.scss
+++ b/public/styles/scss/module/_landing-section.scss
@@ -26,7 +26,7 @@
         margin-bottom: .75rem;
       }
     }
-    .card .landing-contacts{
+    .card .icon-col{
       ul{
         display: block;
         margin: 0;
@@ -44,7 +44,7 @@
         letter-spacing: .021em;
         padding-top:.375rem !important;
         padding-bottom: .375rem !important;
-        padding-left: 50px;
+        padding-left: 53px;
         position: relative;
       }
         // icons
@@ -92,6 +92,7 @@
           font-size: 1rem;
           font-weight: bold;
           letter-spacing: .021em;
+          text-decoration: none;
         }
     }
     .icon-container{
@@ -177,7 +178,7 @@
   .two-col-img-container {
     margin-left: 5%;
     margin-top: 6.5em;
-    margin-bottom: 3em;
+    margin-bottom: 9em;
   }
   .landing-img{
     width: 100%;
@@ -219,27 +220,3 @@
     }
   }
 }
-
-
-
-
-
-// THE NECROPOLIS -- WHERE GOOD CODE GOES TO DIE AND BE RESURECTED
-// .landing-container{
-//   // border: 1px solid black;
-//   // height: 38vh;
-//   @extend %landing-img-style;
-// }
-// .active .landing-content-container::before{
-//   position: absolute;
-//   content: '';
-//   z-index: 1;
-//   display: block;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background: white;
-//   transform-origin: 100% 50%;
-//   animation: revealRight 1s cubic-bezier(0.23,1,0.75,1) forwards;
-// }
