--- a/public/styles/scss/module/_portfolio-section.scss
+++ b/public/styles/scss/module/_portfolio-section.scss
@@ -5,7 +5,7 @@
 }
 
 .profile-card-header{
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem;
   margin-bottom: 0;
   background-color: #fff;
   border-bottom: 1px solid #e7e7e7;
@@ -20,9 +20,8 @@
       background-color: $gray-200;
       border: none;
       color: $stone-grey;
-      margin-right: 1em;
+      line-height: 4em;
       margin-bottom: 0;
-      margin-left: .5rem;
       padding: 1rem;
       text-decoration: none;
       &:hover{
@@ -42,7 +41,7 @@
   }
 .profile-card-body{
   display: none;
-  padding: 1.75rem;
+  padding: 1.5rem;
   figure{
     padding: .25rem;
     -webkit-box-shadow: 0 0.75rem 1.25rem 0.0625rem rgba(64,64,64,0.09);
