--- a/public/styles/scss/module/_services-section.scss
+++ b/public/styles/scss/module/_services-section.scss
@@ -1,12 +1,80 @@
 // ======= SERVICES ======== //
+#section-banner-a{
+  background-image: url(../assets/img/mtn.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+	// &:after {
+	// 	box-shadow:inset 0px -200px 50px -125px rgba(255,255,255,1);
+	// 	content: '';
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	z-index: 999;
+	// }
+}
 .services-container{
-  // background-image: url(../assets/img/arrow.png);
-  // background-position: 81% 450px;
-  // background-repeat: no-repeat;
+  .img-title-wrapper{
+    z-index: 1000;
+  }
 }
 .service-col{
   // border: 1px solid black;
   .service-card{
+    #icon-col-b{
+      ul>li{
+        padding-left: 65px;
+      }
+        // icons
+        ul>li>i{
+          display: block;
+          position: absolute;
+          left: 0;
+          width: 36px;
+          height: 36px;
+          border-radius: 50%;
+          background-color: #fff;
+          color: $primary-green;
+          top: .5rem !important;
+          font-size: .9375rem;
+          line-height: 36px;
+          text-align: center;
+          box-shadow: 0 0.5rem 1.25rem 0 rgba(0,0,0,0.11);
+        }
+        ul>li>.svg-inline--fa{
+          display: block;
+          position: absolute;
+          left: 0;
+          width: 36px;
+          height: 36px;
+          background-color: #fff;
+          border-radius: 50%;
+          box-shadow: 0 0.5rem 1.25rem 0 rgba(0,0,0,0.11);
+          color: $primary-green;
+          padding: 10px;
+          font-size: .9375rem;
+        }
+        // sub titles
+        ul>li>span{
+          display: block;
+          padding-bottom: 1px;
+          color: #8c8c8c;
+          font-size: .75rem;
+          font-weight: 600;
+          text-transform: uppercase;
+        }
+        // text links
+        ul>li>a{
+          display: block;
+          color: $stone-grey;
+          font-size: 1rem;
+          font-weight: bold;
+          letter-spacing: .021em;
+          text-decoration: none;
+        }
+    }
+
     .post-thumb{
       display: block;
       position: relative;
@@ -20,32 +88,36 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      .card-header{
+        border: none;
+      }
       .card-body{
         padding: .5rem;
-      }
-      .service-title{
-        display: block;
-        margin-top: 0;
-        margin-bottom: 0.75rem;
-        font-weight: 900;
-        font-size: 2.125rem;
-        letter-spacing: 0.021rem;
-      }
-      .service-title>a{
-        color: #515052;
-        -webkit-transition: color .3s;
-        transition: color .3s;
-        text-decoration: none;
       }
     }
   }
 }
-#accordion {
+#service-block {
   .svg-inline--fa {
     margin-left: 1em;
   }
 }
 @include media-breakpoint-up(lg){
+  #section-banner-a{
+    background-size: cover;
+    &:after {
+      content: '';
+      // -webkit-box-shadow: inset -162px 16px 23px -25px rgba(255,255,255,1);
+      // -moz-box-shadow: inset -162px 16px 23px -25px rgba(255,255,255,1);
+      // box-shadow: inset -162px 16px 23px -25px rgba(255,255,255,1);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 999;
+    }
+  }
   .service-col{
     .service-card{
       .service-card-body{
