--- a/views/includes/components/client-section.pug
+++ b/views/includes/components/client-section.pug
@@ -1,10 +1,10 @@
 .contact-container.card
   h1.little-title.ml-auto.mr-auto.mt-5 A People First Approach
   .row.align-items-center
-    .col-lg-4.col-sm-12.ml-auto
+    .col-lg-4.col-sm-12.order-2.order-md-1.ml-auto
       .col-lg-10.col-8.text-center.ml-auto.mr-auto.mt-4
         .row.text-left
           p.text-content  No matter what your path or where you're from, I can help achieve your real estate goals with confidence and peace of mind. Local flavor with endless options. Achieving your real estate goals through relationships built on trust and communication.
-        hr.clients-hr
-    .col-lg-4.col-8.ml-auto.mr-auto
+        hr.clients-hr.d-none.d-md-block
+    .col-lg-4.col-8.ml-auto.mr-auto.order-1.order-md-2
       include landing-reviews
